--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -13,6 +13,12 @@
 
   .projects {
     display: flex;
+    flex-direction: row;
+
+    @media (max-width: 50rem) {
+      flex-direction: column;
+    }
+
     justify-content: space-around;
     align-items: flex-start;
     flex-grow: 1;
